crates/config/tests/unit/snapshots/main__unit__config_file__a_patch_round_trips_through_the_public_parser.snap
---
source: crates/config/tests/unit/config_file.rs
assertion_line: 28
expression: round_tripped
---
ConfigToml {
    music_dir: Some(
        "/music",
    ),
    theme: Named(
        ThemeName(
            "noir",
        ),
    ),
    volume: Percent(
        42,
    ),
    audio: AudioConfig {
        crossfade: Crossfade(
            0ns,
        ),
        replay_gain: Off,
        device: Named(
            DeviceName(
                "Speakers",
            ),
        ),
        sleep_presets: SleepPresets(
            [
                900s,
                1800s,
                3600s,
            ],
        ),
    },
    keymap: {},
}
