crates/config/tests/unit/snapshots/main__unit__config_file__parse_config_settings_reads_the_keymap_and_the_music_dir.snap
---
source: crates/config/tests/unit/config_file.rs
assertion_line: 36
expression: parsed
---
ConfigSettings {
    keymap_overrides: {
        "next": KeyOverride {
            chord: "x",
            key_context: Global,
        },
    },
    music_dir: Some(
        "/tmp/music",
    ),
}
