crates/config/tests/unit/snapshots/main__unit__config_file__parse_keymap_reads_the_keymap_and_the_root_music_dir.snap
---
source: crates/config/tests/unit/config_file.rs
expression: parsed
---
ConfigReload {
    keymap: {
        "next": KeyOverride {
            chord: "x",
            context: Global,
        },
    },
    music_dir: Some(
        "/tmp/music",
    ),
}
