crates/config/tests/unit/snapshots/main__unit__config_file__the_commented_fixture_parses_into_every_table.snap
---
source: crates/config/tests/unit/config_file.rs
expression: parsed
---
ConfigFile {
    music_dir: Some(
        "/music",
    ),
    theme: Auto,
    volume: Percent(
        50,
    ),
    audio: AudioConfig {
        crossfade: Crossfade(
            0ns,
        ),
        replaygain: Off,
        device: None,
        sleep_presets: SleepPresets(
            [
                900s,
                1800s,
                3600s,
            ],
        ),
    },
    keymap: {},
}
